fix(popup): avoid horizontal overflow on Firefox

--- a/src/css/popup.scss
+++ b/src/css/popup.scss
@@ -71,6 +71,9 @@ $background-colors-dark: (
 body {
   max-width: 300px;
   width: 300px;
+  // to solve horizontal overflow for Firefox
+  overflow-y: scroll;
+
   font-size: 14px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
     'Apple Color Emoji', Arial, sans-serif, 'Segoe UI Emoji', 'Segoe UI Symbol';
